# enigma-memory

./: .gitattributes  .gitignore  DEPENDABOT_NOTES.md  Dockerfile  GOAL.md  LICENSE  README.md  SECURITY.md  UsersntrapAppDataLocalTempenigma-release-provenance-test.json  UsersntrapAppDataLocalTempenigma-release-provenance-test2.json  docker-compose.build.yml  docker-compose.yml  package-lock.json  package.json  protection-restore.json  protection-temp.json
.github/: CODEOWNERS
apps/desktop-tauri/: .dockerignore  Cargo.toml  Dockerfile  tauri.conf.json
apps/desktop-tauri/capabilities/: default.json
apps/desktop-tauri/src/: lib.rs  main.rs
apps/desktop-tauri/src/commands/: crash.rs  diagnostics.rs  mod.rs  service.rs  update.rs
apps/desktop-tauri/src/connector/: claude.rs  cursor.rs  engine.rs  generic.rs  kimi.rs  mod.rs  opencode.rs  roo.rs  vscode_cline.rs
apps/desktop-tauri/ui/: help.js  index.html  styles.css  wizard.js
cortex-v3/: .dockerignore  .gitignore  Anchor.toml  BLOCKERS.md  Cargo.toml  Dockerfile  GOAL.md  README.md  package.json  tsconfig.json
cortex-v3/.cargo/: config.toml
cortex-v3/.devcontainer/: Dockerfile  devcontainer.json
cortex-v3/deploy/: MAINNET_SETUP.md  deploy-devnet.sh  generate-keypair.py  github-secret.py
cortex-v3/docs/: windows-anchor-setup.md
cortex-v3/idl/: budget_escrow.json  capability_registry.json  cortex_token.json  cortex_treasury.json  memory_registry.json  royalty_router.json
cortex-v3/node/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
cortex-v3/node/src/: auto-save.mjs  embed.mjs  mcp-server.mjs  oauth-server.mjs  server.mjs  store.mjs  verify-guest.mjs  verify.mjs
cortex-v3/node/test/: auto-save.test.mjs  integration.test.mjs  mcp-session-verify.test.mjs  mcp.test.mjs  oauth.test.mjs  store.test.mjs  verify.test.mjs
cortex-v3/programs/budget_escrow/: Cargo.toml
cortex-v3/programs/budget_escrow/src/: lib.rs
cortex-v3/programs/capability_registry/: Cargo.toml
cortex-v3/programs/capability_registry/src/: lib.rs
cortex-v3/programs/cortex_token/: Cargo.toml
cortex-v3/programs/cortex_token/src/: lib.rs
cortex-v3/programs/cortex_treasury/: Cargo.toml
cortex-v3/programs/cortex_treasury/src/: lib.rs
cortex-v3/programs/memory_registry/: Cargo.toml
cortex-v3/programs/memory_registry/src/: lib.rs
cortex-v3/programs/royalty_router/: Cargo.toml
cortex-v3/programs/royalty_router/src/: lib.rs
cortex-v3/scripts/: windows-setup.ps1
cortex-v3/specs/: bottleneck-solutions-architecture.md  cortex-v3-webapp-design.md  deploy-devnet-steps.md  design-data-model.json  design-offchain-node.json  design-security.json  design-smart-contracts.json  design-webapp.json  frictionless-first-architecture.md  frictionless-memory-ux-research.md  security-audit-checklist.md  unified-architecture.md
cortex-v3/tests/: budget_escrow.ts  capability_registry.ts  cortex_token.ts  cortex_treasury.ts  session_wallet.ts
cortex-v3/webapp/: .gitignore  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
cortex-v3/webapp/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
cortex-v3/webapp/app/api/session/: route.ts
cortex-v3/webapp/app/connect/: page.tsx
cortex-v3/webapp/app/dashboard/: page.tsx
cortex-v3/webapp/app/earnings/: page.tsx
cortex-v3/webapp/app/memories/: page.tsx
cortex-v3/webapp/app/session/: page.tsx
cortex-v3/webapp/components/: LoginButton.tsx  ModelConnector.tsx  WalletButton.tsx
cortex-v3/webapp/lib/: anchor.ts  programs.ts  session.ts
cortex-v3/webapp/public/: manifest.json  sw.js
cortex-v3/webapp/types/: idl.d.ts
deploy/: README.md  SIMULATION.md  docker-compose.local-production-simulation.yml  docker-compose.production.example.yml  kms-mock.mjs  nginx.local-production-simulation.conf  siem-mock.mjs
docs/: GENERAL_PUBLIC_LAUNCH_GOAL.md  GENERAL_PUBLIC_LAUNCH_WORKPLAN.md  MEMORY_BOUNDARY_TRANSACTION_GOAL.md  WORKFLOWZ_FRICTIONLESS_GOAL.md  advisor-operating-model.md  benchmark-attestation-network.md  benchmark-reproducibility.md  blockchain-only-mechanisms.md  browser-extension-install.md  client-connectors.md  cloudflare-token-and-domain-runbook.md  cloudflare-token-rotation.md  competitive-landscape-ai-memory-cortex-v3.md  competitive-memory-analysis.md  demo-proof-network.md  demo-video-assets.md  deployment-runbook.md  developer-ecosystem.md  developer-proof-quickstart.md  enigma-memory-ready-conformance.md  enigma-memory-technical-whitepaper.md  enterprise-byoc-runbook.md  enterprise-proof-control-plane.md  fixtures.md  gpt55-kimi-operating-plan.md  hosted-cloud-product.md  hosted-docs-hub.md  install-anywhere.md  installers-and-desktop.md  killer-demos.md  live-endpoint-monitoring.md  market-category-narrative.md  memory-benchmarks.md  memory-controller.md  memory-drive-health-model.md  memory-drive-strategy.md  memory-passport-standard.md  novelty-invention-candidates.md  npm-publishing.md  one-pager.md  (+36 more)
examples/: node-basic-memory.mjs  proof-network-anchor.json  proof-network-attestation.json  proof-network-grant.json  proof-network-packet.json
launch/: 00_LAUNCH_README.md  01_EXECUTIVE_BRIEF.md  02_WHITEPAPER.md  03_LITEPAPER.md  06_WEBSITE_COPY.md  07_BRAND_MESSAGING.md  08_PRESS_KIT.md  14_FAQ_AND_OBJECTIONS.md  15_USER_INSTALL_GUIDE.md  16_DEMO_SCRIPTS.md  17_LAUNCH_CHECKLIST.md
scripts/: build-ai-orchestration-plan.mjs  build-benchmark-proof-release.mjs  build-claude-mcpb-package.mjs  build-cloudflare-pages-release-packet.mjs  build-cloudflare-token-policy.mjs  build-cloudflare-token-request.mjs  build-cortex-v3-in-docker.mjs  build-demo-assets.mjs  build-edge-backend-workers.mjs  build-goal-completion-audit.mjs  build-hosted-api-key-lifecycle.mjs  build-hosted-customer-lifecycle.mjs  build-hosted-probe-worker.mjs  build-hosted-ref-draft.mjs  build-installer-assets.mjs  build-operator-acceptance-packet.mjs  build-operator-evidence-starter.mjs  build-production-backend-env-kit.mjs  build-production-dependency-report.mjs  build-production-handoff-packet.mjs  build-production-unblocker.mjs  (+60 more)
(+208 files in other folders)
