[workspace]
members = [
    "programs/*",
    "programs/cortex_token"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
# Pin transitive deps to versions compatible with Rust 1.75 / Solana 1.18.26 SBF toolchain
blake3 = "=1.5.1"
digest = "=0.10.7"
block-buffer = "=0.10.4"
indexmap = "=2.11.4"
proc-macro-crate = "=3.3.0"
jobserver = "=0.1.32"
zeroize_derive = "=1.4.2"
borsh = "=1.5.1"
rayon = "=1.8.0"
rayon-core = "=1.12.1"
unicode-segmentation = "=1.10.1"
wasm-bindgen = "=0.2.90"
wasm-bindgen-macro = "=0.2.90"
wasm-bindgen-shared = "=0.2.90"
wasm-bindgen-backend = "=0.2.90"
wasm-bindgen-macro-support = "=0.2.90"
js-sys = "=0.3.67"
web-sys = "=0.3.67"
proc-macro2 = { version = "=1.0.91", features = ["span-locations"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
