[package]
name = "enigma-desktop-tauri"
version = "0.1.18"
description = "Enigma Memory consumer desktop app"
authors = ["Enigma Protocol"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "enigma_desktop_tauri_lib"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "enigma-desktop-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["process", "sync", "time", "rt", "macros", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
parking_lot = "0.12"
dirs = "5.0"
regex = "1"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
strip = true
lto = true
opt-level = "s"
