[package]
name = "capability_registry"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["init-if-needed"]
init-if-needed = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
blake3 = { workspace = true }
digest = { workspace = true }
block-buffer = { workspace = true }
