[package]
name = "capability_registry"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["init-if-needed"]
init-if-needed = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
proc-macro2 = { workspace = true }
blake3 = { workspace = true }
digest = { workspace = true }
block-buffer = { workspace = true }
indexmap = { workspace = true }
proc-macro-crate = { workspace = true }
jobserver = { workspace = true }
zeroize_derive = { workspace = true }
memory_registry = { path = "../memory_registry", features = ["cpi"] }
