[package]
name = "cortex_treasury"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["init-if-needed"]
init-if-needed = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
blake3 = { workspace = true }
digest = { workspace = true }
block-buffer = { workspace = true }
indexmap = { workspace = true }
proc-macro-crate = { workspace = true }
jobserver = { workspace = true }
zeroize_derive = { workspace = true }
budget_escrow = { path = "../budget_escrow", features = ["cpi"] }
