[package]
name = "cortex_treasury"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["init-if-needed"]
init-if-needed = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
